--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -16,10 +16,10 @@
   },
   "dependencies": {
     "@copilotkit/sdk-js": "1.10.6",
-    "@langchain/core": "^1.0.1",
+    "@langchain/core": "^1.0.0-alpha.7",
     "@langchain/langgraph": "1.0.2",
-    "@langchain/langgraph-checkpoint": "1.0.0",
-    "@langchain/openai": "^1.1.3",
+    "@langchain/langgraph-checkpoint": "1.0.0",    
+    "@langchain/openai": "^1.0.0-alpha.3",    
     "zod": "^3.23.8"
   }
 }
