--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "workspaces": [
     "apps/*"
   ],
-  "scripts": {
+  "scripts": {    
+    "start": "next build apps/web && next start apps/web",
     "dev": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint"
